--- a/styles.css
+++ b/styles.css
@@ -48,3 +48,12 @@ input[type="submit"] {
 input[type="submit"]:hover {
     background-color: #0056b3;
 }
+
+.result-box {
+    border: 1px solid #007bff;
+    border-radius: 5px;
+    background-color: #ffff;
+    padding: 20px;
+    max-width: 600px;
+    margin: 0 auto;
+}
